# brain_tumor_classification_cnn_model

./: .gitignore  README.md  fetch_data_from_kaggle.sh  pyproject.toml
braintumor_model_api/app/: controller.py  main.py
research/: brain_tumor_cnn_model.ipynb
